2007-09-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory.c (nautilus_directory_finalize):
	directory->details->pending_file_info now has GFileInfo objects, not
	GnomeVFSFileInfo objects. Free them in the correct way.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Remove old irrelevant comment
	
2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Read top left text with gio

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-ditem-page.c:
	Use g_file_load_contents_async instead of
	eel_read_entire_file_async.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-thumbnails.c:
	Use g_file_load_contents_async instead of
	eel_read_entire_file_async.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-metafile.c:
	Use g_file_load_contents_async instead of
	eel_read_entire_file_async.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file.c:
	Initialize hidden_file_hash lazily

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Read link info using gio

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
	Read mime list using gio

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Read .hidden using gio.

2007-09-25  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-factory.c:
	Free file_info after last use (fixed valgrind warning)
	